# Resolution_Rust

./: README.md
week1/: Cargo.toml
week1/src/: main.rs
