[package]
name = "Lyric_Santana_hn_cli"
version = "0.1.0"
edition = "2024"
description = "CLI app for getting top stories of Hacker News"
license = "MIT"
repository = "https://github.com/LyricSantana/Resolution_Rust"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }